# fermi

./: .gitignore  AGENTS.md  README.md  bunfig.toml  eslint.config.mjs  nuxt.config.ts  package.json  plan-fermentAiChatGlobal.prompt.md  plan-fermentAiChatLocalStorage.prompt.md  renovate.json  turbo.json  vitest.config.ts
.github/workflows/: ci.yml  release.yml
app/: app-base.vue  app.config.ts  app.vue  error.vue  queryClient.ts
app/components/: ArchiveFermentButton.vue  ArchiveForm.vue  CardHeader.vue  Chat.vue  ChatButton.vue  ChatSidebar.vue  DeleteFermentButton.vue  DuplicateFermentButton.vue  EditActiveFermentForm.vue  EditCompletedFermentForm.vue  EditFermentButton.vue  Empty.vue  FavoriteFermentButton.vue  FermentCard.vue  FermentDetails.vue  FermentForm.vue  FermentFormActions.vue  ImageForm.vue  ImagesFormField.vue  IngredientBadges.vue  IngredientsCell.vue  IngredientsFormField.vue  InputDatePicker.vue  Loader.vue  NameFormField.vue  NewFermentButton.vue  NewFermentForm.vue  RatingsCard.vue  SortableTableHeader.vue  StarsCell.vue  UnarchiveFermentButton.vue  UnfailFermentButton.vue
app/composables/: badge.ts  charts.ts  chat.ts  chatFermentContext.ts  chatHistory.ts  chatTools.ts  collections.ts  config.ts  ferments.ts  id.ts  useCharts.ts  useFermentationStore.ts  useFerments.ts  useFermiConfig.ts  useLocalStorageSchema.ts  useTime.ts  useTimeBetween.ts
app/layouts/: default.vue
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
test/: data.ts
(+137 files in other folders)
