[package]
name = "fermi"
version = "1.1.1"
description = "Fermentation Tracking App"
authors = []
license = "MIT"
edition = "2021"

[lib]
name = "fermi_lib"
crate-type = [
  "staticlib",
  "cdylib",
  "rlib"
]

[build-dependencies.tauri-build]
version = "2.4.1"
features = [ ]

[dependencies]
tauri-plugin-notification = "2.3.1"
tauri-plugin-fs = "2.4.2"
tauri-plugin-store = "2.4.0"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
serde_json = "1"

[dependencies.tauri]
version = "2.9.1"
features = [
  "tray-icon",
  "unstable"
]

[dependencies.serde]
version = "1"
features = [ "derive" ]
